# comfyui-vllm-omni

./: CLAUDE.md  README.md  __init__.py  pyproject.toml  requirements.txt  serverside-implementation.md  utils.py  vllm_api.py  vllm_omni_node.py
examples/: vllm-omni basic t2i.json  vllm-omni image edit.json  vllm-omni text to image plus edit.json
